@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.426 2005/12/05 19:24:48 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.427 2005/12/07 07:11:44 rocket Exp $
+
+  07 Dec 2005; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py:
+  Fix for unpack cases
 
   05 Dec 2005; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py:
